sandc/test/fixtures/astRegression/shouldSucceed/productions/statement/LoopStatement.sand
pub class LoopStatement {
    foo() {
        loop {
            
        }

        loop {
            foo();
        }
    }
}