sandc/test/fixtures/astRegression/shouldFail/productions/literalExpression/MethodInvocationTypeParamsTrailingComma.sand
pub class MethodInvocationTypeParamsTrailingComma {
    foo() {
        foo<T,>()
    }
}